# inferlib

./: .gitignore  Cargo.toml  README.md  SPEC.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: compare_vs_python.py
inferlib-python/: Cargo.toml  pyproject.toml
inferlib-python/src/: lib.rs
src/: lib.rs  sampling.rs
