[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "inferlib"
version = "0.1.0"
description = "Fast LLM inference primitives in Rust"
authors = [{name = "inferlib", email = "contact@inferlib.ai"}]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["llm", "inference", "sampling", "rust", "pytorch", "transformers"]

[project.urls]
Homepage = "https://github.com/inferlib-ai/inferlib"
Documentation = "https://github.com/inferlib-ai/inferlib#readme"
Repository = "https://github.com/inferlib-ai/inferlib"
Changelog = "https://github.com/inferlib-ai/inferlib/releases"

[project.optional-dependencies]
dev = ["pytest", "pytest-benchmark"]

[tool.maturin]
features = ["pyo3/extension-module"]
